examples/simple/undefined/UB-STDIO1-bad.c
// Copyright (c) 2015 Runtime Verification, Inc. (RV-Match team). All Rights Reserved.

#include <stdio.h>

int main(void){
	printf("%d\n", (long long int)(7));
	return 0;
}
